# SmartCalc

./: .gitignore  .pylintrc  .vercelignore  CHANGELOG.md  DEPLOYMENT.md  PROJET-COMPLET.md  README-WEB.md  README.md  __init__.py  app.py  build.py  currency_rates.json  deploy.bat  deploy.sh  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-docs.txt  requirements-web.txt  requirements.txt  setup.py  test_import.py  vercel.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-format.yml  build.yml  format.yml  notifications.yml  pages.yml  python-app.yml  python-docs.yml  release.yml
assets/images/characters/: README.txt
controllers/: __init__.py  advanced_controller.py  calculator_controller.py  conversion_controller.py  currency_controller.py  discrete_controller.py  scientific_controller.py
docs/: api.md  index.md  installation.md  usage.md
models/: __init__.py  advanced_model.py  calculator_model.py  conversion_model.py  currency_model.py  discrete_model.py  scientific_model.py
smartcalc/: __init__.py
static/css/: style.css
static/js/: app.js  calculator.js  converter.js  scientific.js
templates/: base.html  converter.html  index.html  scientific.html
tests/: __init__.py  test_basic.py
views/: __init__.py  advanced_view.py  calculator_view.py  conversion_view.py  currency_view.py  discrete_view.py  scientific_view.py
