[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcalc"
version = "1.0.0"
description = "Une calculatrice scientifique avancée avec interface graphique"
readme = "README.md"
authors = [
    {name = "Votre Nom", email = "votre@email.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "sympy>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
    "pylint>=2.12.0",
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.0.0",
    "mkdocstrings>=0.18.0",
    "pymdown-extensions>=9.0",
]

[project.scripts]
smartcalc = "smartcalc.main:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint]
master = true
load-plugins = ["pylint.extensions.docparams"]

[MAIN]
disabled = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
]

[FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=smartcalc --cov-report=term-missing"

[tool.coverage.run]
source = ["smartcalc"]
omit = ["**/__pycache__/*", "**/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["PyQt6.*"]
ignore_missing_imports = true

[metadata]
license = "MIT"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
